agragado de login y algunas correcciones

--- a/src/app/componentes/aptitudes/aptitudes.component.html
+++ b/src/app/componentes/aptitudes/aptitudes.component.html
@@ -2,7 +2,7 @@
 
     <h3>Aptitudes</h3>
  
-    <button class="btn"><i class="fa-solid fa-pen"></i></button>
+    <button class="btn" *ngIf="isLogged"><i class="fa-solid fa-pen"></i></button>
     
       <p>Habilidades comerciales.</p>
       <p>Aptitudes para atencion al cliente.</p>
