--- a/src/app/componentes/estudios/estudios.component.html
+++ b/src/app/componentes/estudios/estudios.component.html
@@ -1,11 +1,11 @@
 <section id="estudios" class="tarjetas" >
     <h3>Estudios</h3>
-    <button class="btn"><i class="fa-solid fa-square-plus" routerLink="agreestudio"></i></button>
+    <button class="btn" *ngIf="isLogged"><i class="fa-solid fa-square-plus" routerLink="agreestudio"></i></button>
     
     <div *ngFor="let estu of estudios">
       <div>
-        <button class="btn"><i class="fa-solid fa-pen" routerLink="editestudio/{{estu.id}}"></i></button>
-        <button class="btn"><i class="fa-solid fa-trash-can" (click)="delete(estu.id)" ></i></button>
+        <button class="btn" *ngIf="isLogged"><i class="fa-solid fa-pen" routerLink="editestudio/{{estu.id}}"></i></button>
+        <button class="btn" *ngIf="isLogged"><i class="fa-solid fa-trash-can" (click)="delete(estu.id)" ></i></button>
   </div>
       <h4>{{estu.titulo}}</h4>
       <p>{{estu.institucion}}</p>
