--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -1,40 +1,39 @@
+<section class="vh-100 grandiend-custom">
+  <div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center aling-items-center h-100">
+      <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+        <div class="card bg-dark text-white" style="border-radius: 1rem;">
+          <div class="card-body p-5 text-center">
 
-<form [formGroup]="form" (ngSubmit)="onEnviar($event)">
-    <div>
-      <label for="email">Email: </label>
-      <input class="form-control"
-        type="email"
-        formControlName="email"
-        [class.border-danger]="MailInvalid"
-      />
+            <div class="mb-md-5 mt-md-4 pb-5">
+              <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
+              <p class="text-white-50 mb-5">Porfavor ingresar Usuario y Clave</p>
+
+              <form #f="ngForm" (ngSubmit)="onLogin()" novalidate>
+                <div class="form-outline form-white mb-4">
+                  <input type="email" id="nombreUsuario" name="nombreUsuario" class="form-control form-control-lg" [(ngModel)]="nombreUsuario" required/>
+                  <label class="form-label" for="nombreUsuario">Usuario</label>
+                </div>
+
+                <div class="form-outline form-white mb-4">
+                  <input type="password" id="password" name="password" class="form-control form-control-lg" [(ngModel)]="password" required/>
+                  <label class="form-label" for="password">Contraseña</label>
+                </div>
+
+                <!-- <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Forgot Password?</a></p> -->
+
+                <button class="btn btn-outline-light btn-lg px-5" type="submit">Iniciar seción</button>
+              </form>
+
+            </div>
+
+            <div>
+              <p class="mb-0">¿No tienes cuenta?<a href="#" class="text-white-50 fw-bold">Sign up</a></p>
+            </div>
+
+          </div>
+        </div>
+      </div>
     </div>
-    <!-- Gracias al getter que configuramos en el controlador -->
-    <div *ngIf="Mail?.errors && Mail?.touched"  >
-      <p *ngIf="Mail?.hasError('required')" >El email es requerido.</p>
-      <p *ngIf="Mail?.hasError('email')" >
-        El formato del email debe ser válido.
-      </p>
-    </div>
-  
-    <br />
-    <div>
-      <label for="exampleInputPassword1">Password: </label>
-      <input class="form-control"
-        type="password"
-        formControlName="password"
-        [class.border-danger]="PasswordInvalid"
-      />
-    </div>
-    <!-- Gracias al getter que configuramos en el controlador -->
-    <div *ngIf="Password?.errors && Password?.touched" >
-      <p *ngIf="Password?.hasError('required')" >
-        El password es requerido.
-      </p>
-      
-    </div>
-    <br />
-    <div>
-      <button type="submit">Iniciar Sesión</button>
-    </div>
-  </form>
-  
+  </div>
+</section>
