--- a/src/app/componentes/navegacion/navegacion.component.html
+++ b/src/app/componentes/navegacion/navegacion.component.html
@@ -5,7 +5,7 @@
       <a href="/estudios">Estudios</a>
       <a href="/experiencias">Experiencias</a>
       <a href="/aptitudes">Aptitudes</a>
-      <a href="/idiomas">Idiomas</a>
+      <a href="/idiomas">Idiomas y Tecnologías</a>
       <a href="/proyectos">Proyectos</a>
       <a href="/contacto">Contacto</a>
     </nav>
