--- a/src/app/componentes/estudios/estudios.component.html
+++ b/src/app/componentes/estudios/estudios.component.html
@@ -1,16 +1,21 @@
-<section id="estudios" class="tarjetas" >
+<section id="estudios" class="tarjetas">
+
+  <div class="subtitulo">
     <h3>Estudios</h3>
     <button class="btn" *ngIf="isLogged"><i class="fa-solid fa-square-plus" routerLink="agreestudio"></i></button>
-    
-    <div *ngFor="let estu of estudios">
-      <div>
-        <button class="btn" *ngIf="isLogged"><i class="fa-solid fa-pen" routerLink="editestudio/{{estu.id}}"></i></button>
-        <button class="btn" *ngIf="isLogged"><i class="fa-solid fa-trash-can" (click)="delete(estu.id)" ></i></button>
   </div>
-      <h4>{{estu.titulo}}</h4>
-      <p>{{estu.institucion}}</p>
-      <p>{{estu.inicio}} / {{estu.fin}}</p>
-      <p>{{estu.descripcion}}</p>
-      <hr>
+
+  <div *ngFor="let estu of estudios" class="repeticion">
+
+    <div class="btn">
+      <button class="btn" *ngIf="isLogged"><i class="fa-solid fa-pen" routerLink="editestudio/{{estu.id}}"></i></button>
+      <button class="btn" *ngIf="isLogged"><i class="fa-solid fa-trash-can" (click)="delete(estu.id)"></i></button>
     </div>
-  </section>
+    
+    <h4>{{estu.titulo}}</h4>
+    <p>{{estu.institucion}}</p>
+    <p>{{estu.inicio}} / {{estu.fin}}</p>
+    <p>{{estu.descripcion}}</p>
+    <hr>
+  </div>
+</section>
