--- a/src/styles.css
+++ b/src/styles.css
@@ -12,6 +12,7 @@
     margin: 0 0 0 20%;
    
     padding: 10px;
+    min-height: 71vh;
     
 }
 
@@ -29,7 +30,24 @@
     box-shadow: 5px 5px 15px 5px #000000;
     text-align: start;
    position: relative;
+   display: flex;
+   flex-direction: column;
    
+}
+.subtitulo{
+    display: flex;
+}
+
+.repeticion{
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+}
+.btn{
+    color: white;
+    margin-left: auto;
+    margin-right: 10px;
+    align-self: flex-end;
 }
 
 h3{
