--- a/src/app/componentes/informacion/informacion.component.html
+++ b/src/app/componentes/informacion/informacion.component.html
@@ -1,7 +1,7 @@
 <section id="acerca-de" class="tarjetas" *ngFor="let pers of Persona">
     <h3>Informacíon</h3>
  
-    <button class="btn"><i class="fa-solid fa-pen" routerLink="editpersona/{{Persona.id}}"></i></button>
+    <button class="btn" *ngIf="isLogged"><i class="fa-solid fa-pen" routerLink="editpersona/{{Persona.id}}"></i></button>
     
       <p>{{pers.sobreMi}}</p>
 
